--- a/WanderSync/app/src/main/AndroidManifest.xml
+++ b/WanderSync/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.WanderSync"
         tools:targetApi="31">
         <activity
+            android:name=".view.LoginActivity"
+            android:exported="true"/>
+        <activity
             android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
