--- a/WanderSync/app/src/main/AndroidManifest.xml
+++ b/WanderSync/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.WanderSync"
         tools:targetApi="31">
         <activity
+            android:name=".view.CreateActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".view.LoginActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".view.CreateAccountActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
