--- a/WanderSync/app/src/main/AndroidManifest.xml
+++ b/WanderSync/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
         android:theme="@style/Theme.WanderSync"
         tools:targetApi="31">
         <activity
-            android:name=".view.CreateActivity2"
-            android:exported="false" />
-        <activity
-            android:name=".view.LoginActivity2"
+            android:name=".view.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".view.CreateAccountActivity"
