--- a/mapping.json
+++ b/mapping.json
@@ -1,6 +1,6 @@
 {
     "903872994": "AbeeK16",
     "903690244": "varungiridhar",
-    "903692122": "2FAuth0"
+    "903692122": "2FAuth0",
     "903905501": "rhari8"
 }
